--- a/sshs.html
+++ b/sshs.html
@@ -6,11 +6,11 @@
 <body bgcolor="purple">
 
 Reference links:<br>
-<a href="https://www.file:///C:/Users/Acer/Downloads/peta01.html"> SSHS Theme Song </a><br>
-<a href="https://www.file:///C:/Users/Acer/Downloads/schoolhymn.html"> SSHS School Hymn </a><br>
-<a href="https://www.file:///C:/Users/Acer/Downloads/schoolsong.html"> SSHS School Song </a><br>
-<a href="https://www.file:///C:/Users/Acer/Downloads/mission.html"> SSHS Mission </a><br>
-<a href="https://www.file:///C:/Users/Acer/Downloads/vision.html"> SSHS Vision </a><br>
+<a href="https://blazer0014.github.io/school/themesong.html"> SSHS Theme Song </a><br>
+<a href="https://blazer0014.github.io/school/schoolhymn.html"> SSHS School Hymn </a><br>
+<a href="https://blazer0014.github.io/school/schoolsong.html"> SSHS School Song </a><br>
+<a href="https://blazer0014.github.io/school/mission.html"> SSHS Mission </a><br>
+<a href="https://blazer0014.github.io/school/vision.html"> SSHS Vision </a><br>
 
 </body>
 </html>
