--- a/sshs.html
+++ b/sshs.html
@@ -9,8 +9,7 @@ Reference links:<br>
 <a href="https://blazer0014.github.io/school/themesong.html"> SSHS Theme Song </a><br>
 <a href="https://blazer0014.github.io/school/schoolhymn.html"> SSHS School Hymn </a><br>
 <a href="https://blazer0014.github.io/school/schoolsong.html"> SSHS School Song </a><br>
-<a href="https://blazer0014.github.io/school/mission.html"> SSHS Mission </a><br>
-<a href="https://blazer0014.github.io/school/vision.html"> SSHS Vision </a><br>
+<a href="https://blazer0014.github.io/school/missionandvision.html"> SSHS Mission and Vision </a><br>
 
 </body>
 </html>
